--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
         </div>
         <div class="content">
             <span class="content_title">We have a package zooming to you!</span>
-            <span class="content_banner" style="background-image: url('./banner.png');">
+            <span class="content_banner" style="background-image: url('./images/banner.png');">
             </span>
             <span class="content_text">
                 Hi, JEEVAN BATMAN
