--- a/template_default.html
+++ b/template_default.html
@@ -97,7 +97,7 @@
                                 </div>
                                 <h3
                                     style="font-family: Montserrat,sans-serif;font-style: normal;font-size: 18px;line-height: 22px;display: flex;align-items: center; color: #5C4FE7;margin: 61px 65px 32px;">
-                                    Hi, JEEVAN BATMAN</h3>
+                                    Hi, %RECEIVER_NAME%</h3>
 
                                 <center>
                                     <h3
@@ -108,7 +108,7 @@
                                     <div style="height: 30px;width: 470px; background: #e5e5e5;">
                                         <h3
                                             style="font-family: Montserrat,sans-serif;font-style: normal;font-weight:bold;font-size: 18px;line-height: 30px;align-items: center; color: #000000;">
-                                            NOBLE PALACE
+                                            %CLIENT_NAME%
                                         </h3>
                                     </div>
                                     <h3
@@ -118,7 +118,7 @@
                                     <div style="height: 30px;width: 470px; background: #e5e5e5;">
                                         <h3
                                             style="font-family: Montserrat,sans-serif;font-style: normal;font-weight:bold;font-size: 18px;line-height: 30px;align-items: center; color: #000000;">
-                                            12629XXX
+                                            %TRACKING_ID%
                                         </h3>
                                     </div>
                                 </center>
@@ -129,7 +129,7 @@
                                 <a href="http://zoomitnow.co/parcel-tracker/" target="_blank"
                                     style="background: #03B7BA; text-decoration: none; padding: 10px 25px; color: #ffffff; border-radius: 4px; display:inline-block; mso-padding-alt:0;text-underline-color:#03B7BA">
                                     <!--[if mso]><i style="letter-spacing: 25px;mso-font-width:-100%;mso-text-raise:20pt">&nbsp;</i><![endif]--><span
-                                        style="mso-text-raise:10pt;font-weight:bold;">Claim yours now</span>
+                                        style="mso-text-raise:10pt;font-weight:bold;">Track Package</span>
                                     <!--[if mso]><i style="letter-spacing: 25px;mso-font-width:-100%">&nbsp;</i><![endif]-->
                                 </a>
                             </td>
