--- a/template_with_banner.html
+++ b/template_with_banner.html
@@ -138,7 +138,7 @@
                                 <a href="http://zoomitnow.co/parcel-tracker/" target="_blank"
                                     style="background: #03B7BA; text-decoration: none; padding: 10px 25px; color: #ffffff; border-radius: 4px; display:inline-block; mso-padding-alt:0;text-underline-color:#03B7BA">
                                     <!--[if mso]><i style="letter-spacing: 25px;mso-font-width:-100%;mso-text-raise:20pt">&nbsp;</i><![endif]--><span
-                                        style="mso-text-raise:10pt;font-weight:bold;">Claim yours now</span>
+                                        style="mso-text-raise:10pt;font-weight:bold;">Track Package</span>
                                     <!--[if mso]><i style="letter-spacing: 25px;mso-font-width:-100%">&nbsp;</i><![endif]-->
                                 </a>
                             </td>
